# django-boogie

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.rst  manage.py  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
docs/: Makefile  apidoc.rst  conf.py  configurations.rst  fields.rst  hooks.rst  index.rst  make.bat  orm.rst  rest_api.rst  routing.rst  rules.rst  stack.rst  tasks.rst  testing.rst  views.rst  warning.rst
docs/.doctrees/: configurations.doctree  environment.pickle  faq.doctree  fields.doctree  ideas.doctree  index.doctree  license.doctree  orm.doctree  overview.doctree  rest_api.doctree  routing.doctree  rules.doctree  stack.doctree  testing.doctree  views.doctree  warning.doctree
docs/.doctrees/apps/: tasks.doctree  users.doctree
docs/.doctrees/ideas/: ideas.doctree  stack.doctree  tasks.doctree  views.doctree
docs/apps/: tasks.rst  users.rst
docs/ideas/: ideas.rst  stack.rst  tasks.rst  views.rst
src/boogie/: __init__.py  api.py  db.py  debug.py  decorators.py  functions.py  jinja2.py  render.py  routes.py  rules.py
src/boogie/apps/fragments/: __init__.py  admin.py  apps.py  enums.py  functions.py  models.py  routes.py
src/boogie/apps/fragments/management/commands/: loadfragments.py
src/boogie/apps/fragments/migrations/: 0001_initial.py
src/boogie/apps/tasks/: __init__.py  apps.py  decorators.py  manager.py  models.py  settings.py  tasks.py
src/boogie/apps/users/: admin.py  apps.py  models.py  settings.py
src/boogie/apps/users/migrations/: 0001_initial.py
src/boogie/configurations/: __init__.py  base.py  boogie_conf.py  descriptors.py  django_conf.py  tools.py
src/boogie/configurations/apps/: celery.py  compressor.py  pipeline.py  socialauth.py  userena.py
src/boogie/configurations/django_conf/: __init__.py  database.py  environment.py  installed_apps.py  locales.py  logging.py  middleware.py  paths.py  security.py  services.py  templates.py  urls.py
src/boogie/experimental/colors/: admin.py  apps.py  models.py  validators.py
src/boogie/experimental/faas/: example.py
src/boogie/experimental/icons/: __init__.py  admin.py  apps.py  models.py  validators.py
src/boogie/experimental/icons/management/commands/: loadsocialicons.py
src/boogie/experimental/tasks/: __init__.py  apps.py  decorators.py  manager.py  models.py  settings.py  tasks.py
src/boogie/fields/: __init__.py  default_fields.py  enum_field.py  enum_type.py
src/boogie/models/: __init__.py  decorators.py  manager.py  methodregistry.py  model.py  queryset.py  utils.py  wordcloud.py
src/boogie/models/abstract/: user.py
src/boogie/models/expressions/: __init__.py  combinable.py  f_object.py  fix.py  functions.py  geo.py
src/boogie/rest/: __init__.py  api_info.py  base.py  resource_info.py  rest_api.py  router_builder.py  serializers.py  settings.py  utils.py  viewsets.py
src/boogie/router/: __init__.py  paths.py  route.py  router.py
src/boogie/rules/: __init__.py  proxy.py  value.py  valuemap.py
src/boogie/stack/: boogie_conf.py
src/boogie/tasks/: django.py  python.py  utils.py
src/boogie/testing/: __init__.py  client.py  crawler.py  factories.py  factory_boy.py  mock.py  pytest.py  urlchecker.py
src/boogie/types/: __init__.py  linear_namespace.py  params.py
src/boogie/utils/: __init__.py  linear_namespace.py  params.py  phrases.py  random_names.py  text.py
src/boogie/views/: base.py  middleware.py  mixins.py  utils.py  views.py
tests/: conftest.py  test_configurations.py  test_db_object.py  test_enum.py  test_expressions.py  test_linear_namespace.py  test_models.py  test_queryset.py  test_router.py  test_utils.py  test_z_documentation.py
tests/apps/: test_colors.py  test_fragments.py  test_icons.py
tests/testapp/: admin.py  api.py  apps.py  factories.py  models.py  routes.py
tests/testapp/migrations/: 0001_initial.py  0002_simpeuser.py  0003_auto_20180502_2305.py  0004_delete_simpleuser.py
tests/testproject/: settings.py  urls.py  wsgi.py
