[metadata]
name = django-boogie
version = 0.1.0
description = Django with swagger: better managers, queries and url mappers.
long_description = file: README.rst
author = Fábio Macêdo Mendes
author_email = fabiomacedomendes@gmail.com
url = https://github.com/fabiommendes/django-boogie/

keywords =
    web
    django
license = BSD License (BSD)
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
platforms = posix
include_package_data = True
install_requires =
    sidekick ~= 0.1
    django >= 2.0
    django-bulk-update ~= 2.2.0
    django-model-utils ~= 3.0.0
    pandas ~= 0.22
    lazyutils ~= 0.3.3

setup_requires =
    setuptools >= 30.3


[options.extras_require]
dev =
    invoke ~= 0.21
    flake8 ~= 3.5
    manuel ~= 1.8
    pytest ~= 3.2
    pytest-cov ~= 2.5
    pytest-django ~= 3.1
docs =
    docutils ~= 0.14
    sphinx-autobuild ~= 0.7
rest =
    djangorestframework ~= 3.8
    django-filter ~= 2.0
configurations =
    django-environ ~= 0.4


[options.package_data]
* = *.txt, *.rst, *.jinja2, *.html, *.js, *.css, *.scss
