[metadata]
name = django-boogie
version = boogie.__version__
description = Django with swagger: better managers, APIs, configurations and url mappers.
long_description = file: README.rst
author = Fábio Macêdo Mendes
author_email = fabiomacedomendes@gmail.com
url = https://github.com/fabiommendes/django-boogie/

keywords =
    web
    django
license = BSD License (BSD)
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
platforms = all
include_package_data = True
install_requires =
    sidekick >= 0.4
    django >= 2.0
    django-model-utils >= 3.0
    django-manager-utils >= 1.1
    django-bulk-update >= 2.2


[options.extras_require]
dev =
    invoke >= 0.21
    flake8 ~= 3.5
    manuel ~= 1.8
    pytest ~= 3.2
    pytest-cov ~= 2.5
    pytest-django ~= 3.1
docs =
    docutils ~= 0.14
    sphinx-autobuild ~= 0.7
rest =
    djangorestframework ~= 3.8
    django-filter ~= 1.1
pandas =
    pandas ~= 0.22
    django-pandas ~= 0.5
configurations =
    django-environ ~= 0.4
stack =
    rules
    django-background-tasks
    django-extensions
    django-picklefield
    # django-activity-stream?
    # allauth?
    # userena?
tools =
    django-spaghetti-and-meatballs



[options.package_data]
* = *.txt, *.rst, *.jinja2, *.html, *.js, *.css, *.scss
