[metadata]
name = django-boogie
version = boogie.__version__
description = Django with swagger: better managers, APIs, configurations and url mappers.
long_description = file: README.rst
author = Fábio Macêdo Mendes
author_email = fabiomacedomendes@gmail.com
url = https://github.com/fabiommendes/django-boogie/

keywords =
    web
    django
license = BSD License (BSD)
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
platforms = all
include_package_data = True
install_requires =
    sidekick ~= 0.5.0
    django >= 2.0


[options.extras_require]
configurations =
    django-environ ~= 0.4
extra =
    django-model-utils >= 3.0
    django-manager-utils >= 1.1
    django-bulk-update >= 2.2
    django-polymorphic ~= 2.0
rest =
    djangorestframework ~= 3.8
    django-filter ~= 1.1
pandas =
    pandas ~= 0.22
    django-pandas ~= 0.5.0
stack =
    rules < 2
    django-background-tasks
    django-extensions
    django-picklefield
    django-boogie[rest]
    django-boogie[configurations]
    django-boogie[extra]
    django-boogie[pandas]
dev-stack =
    django-spaghetti-and-meatballs
    django-debug-toolbar
    invoke >= 0.21
    flake8 ~= 3.5
    manuel >= 1.10
    docutils ~= 0.14
    sphinx-autobuild ~= 0.7
    django-boogie[test]
test =
    pytest ~= 3.8
    pytest-cov ~= 2.6
    pytest-django ~= 3.1
    factory_boy ~= 2.0
    model_mommy ~= 1.6
    beautifulsoup4 ~= 4.6
    hyperpython ~= 1.1.0
    faker


[options.package_data]
* = *.txt, *.rst, *.jinja2, *.html, *.js, *.css, *.scss
